# appcvrobot_software

./: .gitignore  CMakeLists.txt  PrettyPrintSSE.py  RPiCameraWide.yaml  RPiCameraWide_640_480.yaml  Readme.md
executables/DebugDashboard/: CMakeLists.txt
executables/DebugDashboard/source/: main.cpp
executables/DumpStatus/: CMakeLists.txt
executables/DumpStatus/source/: main.cpp
executables/KazeTest/: CMakeLists.txt
executables/KazeTest/source/: Fast.cpp  Fast.h  Frame.cpp  Frame.h  FrameKPGrid.cpp  FrameKPGrid.h  Image.cpp  Image.h  Keypoint.h  MVGMath.cpp  MVGMath.h  Map.cpp  Map.h  RansacE.cpp  RansacE.h  RansacH.cpp  RansacH.h  RansacPnP.cpp  RansacPnP.h  SLAM.cpp  SLAM.h  SlowBrief.cpp  SlowBrief.h  Track.cpp  Track.h  main.cpp  simd.h  simd_neon.h  simd_ref.h  simd_sse.h
executables/LCDTest/: CMakeLists.txt
executables/LCDTest/source/: main.cpp
executables/ORBSLAM_Test/: CMakeLists.txt
executables/ORBSLAM_Test/source/: main.cpp
executables/RemoteControl/: RemoteControl.pro
executables/RobotHardwareController/: CMakeLists.txt
executables/RobotHardwareController/source/: ControlSocket.cpp  ControlSocket.h  HardwareInterface.cpp  HardwareInterface.h  Logger.cpp  Logger.h  Manager.cpp  Manager.h  Session.cpp  Session.h  config.cpp  config.h  logging.h  main.cpp
executables/Shutdown/: CMakeLists.txt
executables/Shutdown/source/: main.cpp
executables/SimpleViewer/: CMakeLists.txt
executables/SimpleViewer/source/: main.cpp
firmware/: MotorControl.cpp  MotorControl.h  firmware.ino  protocoll.h
libs/controlSocketProtocol/: CMakeLists.txt
libs/controlSocketProtocol/source/controlSocketProtocol/: ControlSocketProtocol.cpp  ControlSocketProtocol.h  RobotHardware.cpp  RobotHardware.h
libs/robot/: CMakeLists.txt
libs/robot/source/robot/: CameraSystem.cpp  CameraSystem.h  DrivePolicy.cpp  DrivePolicy.h  DrivePolicyAccLimited.cpp  DrivePolicyAccLimited.h  DrivePolicyDirect.cpp  DrivePolicyDirect.h  DrivePolicyEncoderPID.cpp  DrivePolicyEncoderPID.h  HardwareInterface.cpp  HardwareInterface.h  RemoteControlPolicy.cpp  RemoteControlPolicy.h  Robot.cpp  Robot.h  SLAMSystem.cpp  SLAMSystem.h  Subsystem.cpp  Subsystem.h  SystemMonitoring.cpp  SystemMonitoring.h  WifiCommunication.cpp  WifiCommunication.h
scripts/: onBoot.sh  onShutdown.sh  onWifi.sh
scripts/systemd/: RobotHardwareController.service  bootNotification.service  installServices.sh  shutdownNotification.service  wifiNotification.service
